--- a/src/css/module/_menu.scss
+++ b/src/css/module/_menu.scss
@@ -1,4 +1,8 @@
 
+.menu {
+    position: relative;
+    overflow: hidden;
+}
 .menu-logo {
     display: table-cell;
     padding: 0 90px;
